[feature] 調整注單色碼和間距

--- a/app/src/main/res/drawable/bg_frame_4dp_dark.xml
+++ b/app/src/main/res/drawable/bg_frame_4dp_dark.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/keyboard_radius" />
-            <solid android:color="@color/color_062442"/>
+            <solid android:color="@color/color_43546F"/>
         </shape>
     </item>
 </selector>
