--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -241,7 +241,7 @@
                 android:background="@drawable/button_radius_8_bet_button"
                 android:gravity="center"
                 android:text="@string/btn_sure"
-                android:textColor="@color/color_FFFFFF_FFFFFF"
+                android:textColor="@color/color_E8EFFD"
                 android:textSize="@dimen/textSize16sp" />
         </FrameLayout>
 
