--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -387,6 +387,7 @@
     <color name="color_DCB345">#DCB345</color>
     <color name="color_131932">#131932</color>
     <color name="color_202541">#202541</color>
+    <color name="color_EBA900">#EBA900</color>
 
 
     <color name="color_E8EFFD">#E8EFFD</color>
