--- a/app/src/main/res/drawable/bg_button_keyboard.xml
+++ b/app/src/main/res/drawable/bg_button_keyboard.xml
@@ -5,7 +5,7 @@
 
     <gradient
         android:angle="270"
-        android:startColor="@color/color_FDFBFA"
-        android:endColor="@color/color_EDEEF5"
+        android:startColor="@color/color_141931_F9F9F9"
+        android:endColor="@color/color_141931_F9F9F9"
         android:type="linear" />
 </shape>
