--- a/app/src/main/res/drawable/bg_delete_button.xml
+++ b/app/src/main/res/drawable/bg_delete_button.xml
@@ -4,6 +4,6 @@
     <corners android:radius="2dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_0D838383" />
-    <solid android:color="@color/color_EAEAEA" />
+        android:color="@color/color_EAEAEA" />
+    <solid android:color="@color/color_0D838383" />
 </shape>
