--- a/app/src/main/res/layout/item_sport_favorite.xml
+++ b/app/src/main/res/layout/item_sport_favorite.xml
@@ -565,6 +565,37 @@
             </androidx.core.widget.NestedScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="12dp">
+
+            <TextView
+                android:id="@+id/tv_step_score"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/color_535D76"
+                android:textSize="12sp"
+                tools:text="1-1 2-2 3-3" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <org.cxct.sportlottery.widget.HIndicator
+                    android:id="@+id/hIndicator"
+                    android:layout_width="36dp"
+                    android:layout_height="3dp"
+                    app:hi_indicatorColor="@color/color_025BE8"
+                    app:hi_bgColor="@color/color_EDEDED" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
     <ImageView
