--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -332,21 +332,22 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/tv_odd_content_changed"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="@dimen/bet_info_hint_view_height"-->
-<!--                        android:background="@color/color_FFDCA8_FFF3E1"-->
-<!--                        android:drawablePadding="@dimen/margin_10"-->
-<!--                        android:gravity="center_vertical"-->
-<!--                        android:paddingHorizontal="@dimen/margin_14"-->
-<!--                        android:text="@string/bet_info_odd_content_changed2"-->
-<!--                        android:textColor="@color/color_B95700_D26300"-->
-<!--                        android:textSize="@dimen/textSize12sp"-->
-<!--                        android:visibility="gone"-->
-<!--                        app:drawableStartCompat="@drawable/ic_odds_change_tip_v2"-->
-<!--                        app:layout_constraintTop_toTopOf="parent"-->
-<!--                        tools:visibility="gone" />-->
+                    <TextView
+                        android:id="@+id/tv_odd_content_changed"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/bet_info_hint_view_height"
+                        android:background="@color/color_26E23434"
+                        android:drawablePadding="@dimen/margin_10"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="@dimen/margin_14"
+                        android:text="@string/bet_info_odd_content_changed2"
+                        android:textColor="@color/color_E23434_E23434"
+                        android:textSize="@dimen/textSize14sp"
+                        android:visibility="gone"
+                        app:drawableStartCompat="@drawable/ic_bet_lock_tip"
+                        app:drawableTint="@color/color_E23434_E23434"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_no_parlay"
@@ -380,7 +381,7 @@
                         app:drawableStartCompat="@drawable/ic_bet_lock_tip"
                         app:drawableTint="@color/color_141931_F9F9F9"
                         app:layout_constraintTop_toTopOf="parent"
-                        tools:visibility="visible" />
+                        tools:visibility="gone" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
