--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -413,6 +413,7 @@
     <color name="color_DFE8F2">#DFE8F2</color>
     <color name="color_0D838383">#0D838383</color>
     <color name="color_EAEAEA">#EAEAEA</color>
+    <color name="color_26E23434">#26E23434</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
