增加网球等局比分，优化赛事大厅列表布局

--- a/app/src/main/res/drawable/bg_sport_divide_line.xml
+++ b/app/src/main/res/drawable/bg_sport_divide_line.xml
@@ -3,7 +3,5 @@
     android:shape="line">
     <stroke
         android:width="0.5dp"
-        android:color="#ffe2e2e2"
-    android:dashGap="4dp"
-    android:dashWidth="6dp"/>
+        android:color="@color/color_E8EFFD" />
 </shape>
