--- a/app/src/main/res/layout/itemview_odd_btn_2x2_v6.xml
+++ b/app/src/main/res/layout/itemview_odd_btn_2x2_v6.xml
@@ -2,59 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="70dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginRight="6dp"
     android:orientation="vertical"
-    android:layout_marginEnd="8dp"
     tools:ignore="spUsage">
 
     <TextView
         android:id="@+id/odd_btn_row1_type"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_width="66dp"
+        android:layout_height="30dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="3"
         android:textColor="@color/color_6C7BA8"
         android:textSize="@dimen/textSize10sp"
-        app:autoSizeMaxTextSize="@dimen/textSize12sp"
+        app:autoSizeMaxTextSize="@dimen/textSize10sp"
         app:autoSizeMinTextSize="@dimen/textSize8sp"
         app:autoSizeTextType="uniform"
         tools:text="独赢" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingVertical="3dp">
 
+        <org.cxct.sportlottery.ui.game.widget.OddsButton
+            android:id="@+id/odd_btn_row1_home"
+            android:layout_width="66dp"
+            android:layout_height="34dp"
+            android:layout_marginVertical="3dp"
+            app:ob_hide_item_flag="true" />
 
-    <org.cxct.sportlottery.ui.game.widget.OddsButton
-        android:id="@+id/odd_btn_row1_home"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        app:ob_hide_item_flag="true" />
+        <org.cxct.sportlottery.ui.game.widget.OddsButton
+            android:id="@+id/odd_btn_row1_away"
+            android:layout_width="66dp"
+            android:layout_height="34dp"
+            android:layout_marginVertical="3dp"
+            app:ob_hide_item_flag="true" />
 
-    <org.cxct.sportlottery.ui.game.widget.OddsButton
-        android:id="@+id/odd_btn_row1_away"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        app:ob_hide_item_flag="true" />
+        <org.cxct.sportlottery.ui.game.widget.OddsButton
+            android:id="@+id/odd_btn_row1_draw"
+            android:layout_width="66dp"
+            android:layout_height="34dp"
+            android:layout_marginVertical="3dp"
+            app:ob_hide_item_flag="true" />
 
-    <org.cxct.sportlottery.ui.game.widget.OddsButton
-        android:id="@+id/odd_btn_row1_draw"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        app:ob_hide_item_flag="true" />
-
-    <org.cxct.sportlottery.ui.game.widget.OddsButton
-        android:id="@+id/odd_btn_row1_other"
-        android:layout_width="match_parent"
-        android:layout_height="156dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        app:ob_hide_item_flag="true"
-        android:visibility="gone"/>
-
+        <org.cxct.sportlottery.ui.game.widget.OddsButton
+            android:id="@+id/odd_btn_row1_other"
+            android:layout_width="66dp"
+            android:layout_height="114dp"
+            android:layout_marginTop="5dp"
+            app:ob_hide_item_flag="true"
+            android:visibility="gone" />
+    </LinearLayout>
 </LinearLayout>
