1.版本检测跳转 2，昵称输入格式调整

--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -747,6 +747,7 @@
                             android:src="@drawable/ic_icon_version_01" />
 
                         <RelativeLayout
+                            android:id="@+id/update_version"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_marginEnd="10dp"
