优化视频动画

--- a/app/src/main/res/layout/content_odds_detail_list_single_2_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_single_2_item.xml
@@ -17,6 +17,7 @@
 
         <include layout="@layout/content_odds_detail_list_item" />
 
+        <include layout="@layout/content_odds_detail_list_team" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_bet"
