--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -40,7 +40,8 @@
                 <org.cxct.sportlottery.ui.component.DetailLiveViewToolbar
                     android:id="@+id/live_view_tool_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="232dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="232dp"
                     android:layout_gravity="center"
                     android:visibility="gone"
                     tools:visibility="gone" />
