--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -214,15 +214,46 @@
             android:background="@drawable/bg_trans_radius_15"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:visibility="visible"
+            android:visibility="gone"
             tools:visibility="visible">
+
+            <LinearLayout
+                android:id="@+id/lin_live"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingHorizontal="@dimen/margin_7"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_live" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_7"
+                    android:textColor="@color/color_2b2b2b_ffffff"
+                    android:textSize="@dimen/textSize12sp"
+                    android:text="@string/live_streaming" />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/v_menu_1"
+                android:layout_width="1dp"
+                android:layout_height="10dp"
+                android:background="@color/color_99FFFFFF" />
 
             <LinearLayout
                 android:id="@+id/lin_video"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginHorizontal="@dimen/margin_7">
+                android:paddingHorizontal="@dimen/margin_7"
+                android:gravity="center">
+
 
                 <ImageView
                     android:layout_width="16dp"
@@ -236,10 +267,10 @@
                     android:textColor="@color/color_2b2b2b_ffffff"
                     android:textSize="@dimen/textSize12sp"
                     android:text="@string/video" />
-            </LinearLayout>
 
+            </LinearLayout>
             <View
-                android:id="@+id/v_menu_1"
+                android:id="@+id/v_menu_2"
                 android:layout_width="1dp"
                 android:layout_height="10dp"
                 android:background="@color/color_99FFFFFF" />
@@ -248,8 +279,8 @@
                 android:id="@+id/lin_anime"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginHorizontal="@dimen/margin_7">
+                android:paddingHorizontal="@dimen/margin_7"
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="16dp"
