--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -106,7 +106,7 @@
                     tools:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/tv_away_name"
+                    android:id="@+id/tv_toolbar_away_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
