--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,6 +131,73 @@
 
             </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
+
+            <LinearLayout
+                android:id="@+id/block_valid_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_password">
+
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_verification_code"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="4dp"
+                    app:endIcon="@drawable/ic_eye_close"
+                    app:hintText="@string/dialog_security_title"
+                    app:iconSignifier="@drawable/ic_valid"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/verification_code"
+                    app:labelTextStyle="normal"
+                    app:primaryColor="@color/color_AFAFB1">
+
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_verification_code"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:textColor="@color/color_FFFFFF_DE000000"
+                        android:maxLines="1"
+                        android:textSize="@dimen/textSize14sp" />
+
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
+
+
+                <LinearLayout
+                    android:id="@+id/llCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:background="@color/transparent"
+                    android:gravity="center"
+                    android:minWidth="80dp"
+                    android:orientation="horizontal">
+
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/ivVerification"
+                        android:layout_width="109dp"
+                        android:layout_height="40dp"
+                        android:minHeight="32dp"
+                        android:scaleType="fitXY"
+                        android:text="@string/get_verification_code"
+                        app:riv_corner_radius="8dp" />
+
+                    <ImageView
+                        android:id="@+id/ivReturn"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/ic_return" />
+
+                </LinearLayout>
+            </LinearLayout>
+
             <CheckBox
                 android:id="@+id/cb_remember_password"
                 android:layout_width="wrap_content"
@@ -142,7 +209,7 @@
                 android:textColor="@color/color_535D76"
                 android:textSize="@dimen/textSize13sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_password" />
+                app:layout_constraintTop_toBottomOf="@+id/block_valid_code" />
 
             <TextView
                 android:id="@+id/btn_forget_password"
@@ -157,7 +224,7 @@
                 android:textColor="@color/color_F75452_E23434"
                 android:textSize="@dimen/textSize13sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_password" />
+                app:layout_constraintTop_toBottomOf="@+id/block_valid_code" />
 
             <Button
                 android:id="@+id/btn_login"
