--- a/app/src/main/res/layout/dialog_bottom_sheet_calendar.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_calendar.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_calendar_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_2B2B2B_e2e2e2"
+        android:background="@color/color_191919_FCFCFC"
         android:gravity="center"
         android:minHeight="40dp"
         android:paddingVertical="4dp"
@@ -23,17 +23,17 @@
     <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
         android:id="@+id/calendar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/color_191919_FCFCFC"
         custom:date_selection_mode="free_range"
         custom:default_date_color="@color/color_AEAEAE_404040"
         custom:disable_date_color="@color/color_7F7F7F_999999"
         custom:editable="true"
         custom:enable_time_selection="false"
-        custom:range_color="@color/color_191919_DFEAF8"
+        custom:range_color="@color/color_E8EFFD"
         custom:range_date_color="@color/color_AEAEAE_404040"
-        custom:selected_date_circle_color="@color/color_191919_EEEFF0"
-        custom:selected_date_color="@color/color_AEAEAE_404040"
+        custom:selected_date_circle_color="@color/color_025BE8"
+        custom:selected_date_color="@color/color_F9F9F9"
         custom:text_size_date="16dp"
         custom:text_size_title="16dp"
         custom:title_color="@color/color_AEAEAE_404040"
