--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -123,7 +123,7 @@
             android:id="@+id/bet_tab"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="11dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -153,7 +153,7 @@
             android:id="@+id/cl_bet_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="11dp"
+            android:layout_marginHorizontal="8dp"
             android:background="@color/color_191919_FCFCFC"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/bet_tab"
@@ -199,7 +199,7 @@
                 android:id="@+id/settled_title_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="14dp"
+                android:layout_marginHorizontal="8dp"
                 app:cardCornerRadius="2dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -226,7 +226,8 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.5"
+                        android:layout_weight="2"
+                        android:layout_marginStart="7dp"
                         android:gravity="center"
                         android:text="@string/bet_amount"
                         android:textColor="@color/color_6C7BA8_6C7BA8"
@@ -237,6 +238,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center"
+                        android:layout_marginStart="7dp"
                         android:text="@string/available_amount"
                         android:textColor="@color/color_6C7BA8_6C7BA8"
                         android:textSize="@dimen/textSize12sp" />
@@ -244,9 +246,10 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.5"
+                        android:layout_weight="2"
                         android:gravity="center"
                         android:text="@string/win_lose"
+                        android:layout_marginStart="7dp"
                         android:textColor="@color/color_6C7BA8_6C7BA8"
                         android:textSize="@dimen/textSize12sp" />
                 </LinearLayout>
@@ -255,11 +258,11 @@
         </LinearLayout>
 
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
-            android:id="@+id/sm_first_tab_refresh"
+            android:id="@+id/sm_settled_tab_refresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginBottom="19dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_bet_sheet"
             app:srlDragRate="0.3"
@@ -267,12 +270,35 @@
             app:srlEnablePureScrollMode="true">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_record"
+                android:id="@+id/rv_record_settled"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_other_bet_record" />
+                tools:listitem="@layout/item_account_history" />
+
+        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
+        <com.scwang.smart.refresh.layout.SmartRefreshLayout
+            android:id="@+id/sm_unsettled_tab_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="18dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_bet_sheet"
+            app:srlDragRate="0.3"
+            app:srlEnableLoadMore="true"
+            app:srlEnablePureScrollMode="true">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_record_unsettled"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/content_match_record" />
 
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
