1.建议反馈-问题与建议,反馈记录功能完成 2.历史记录功能80%完成后续UI修改 3.常见问题完成

--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -7,12 +7,13 @@
     android:background="@color/color_141414_F3F4F5"
     tools:content="org.cxct.sportlottery.ui.finance.RechargeLogFragment">
 
-    <org.cxct.sportlottery.ui.component.DateRangeSearchView
+    <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
         android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
-        app:dateRange="-7"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:minusDays="6" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
