优化赛事详情赔率布局

--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -50,8 +50,8 @@
             <include
                 android:id="@+id/collaps_toolbar"
                 layout="@layout/view_toolbar_detail_collaps"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                app:layout_collapseMode="pin"
+                android:visibility="gone" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
