--- a/app/src/main/res/layout/button_odd_detail_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail_detail.xml
@@ -90,36 +90,40 @@
                 android:textSize="@dimen/textSize13sp"
                 tools:text="-0.5/1"
                 tools:textColor="@color/color_A7B2C4"
-                app:layout_constraintRight_toLeftOf="@+id/tv_odds"
+                app:layout_constraintRight_toLeftOf="@+id/lin_odd"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
 
-            <TextView
-                android:id="@+id/tv_odds"
+            <LinearLayout
+                android:id="@+id/lin_odd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/helvetica"
-                android:textColor="@color/selector_button_odd_bottom_text"
-                android:textSize="@dimen/textSize14sp"
-                android:paddingLeft="10dp"
-                tools:text="1.067"
-                app:layout_constraintRight_toLeftOf="@+id/iv_arrow"
+                android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
 
-            <ImageView
-                android:id="@+id/iv_arrow"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginRight="2dp"
-                tools:src="@drawable/selector_odds_arrow_up"
-                android:visibility="gone"
-                android:layout_marginLeft="2dp"
-                tools:visibility="visible"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                <ImageView
+                    android:id="@+id/iv_arrow"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginRight="2dp"
+                    tools:src="@drawable/selector_odds_arrow_up"
+                    android:visibility="gone"
+                    android:layout_marginLeft="2dp"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_odds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/helvetica"
+                    android:textColor="@color/selector_button_odd_bottom_text"
+                    android:textSize="@dimen/textSize14sp"
+                    tools:text="1.067" />
+            </LinearLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
