--- a/app/src/main/res/layout/content_odds_detail_list_cs.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_cs.xml
@@ -20,51 +20,9 @@
             android:id="@+id/ll_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="10dp">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/odd_item_horizontal">
-
-                <TextView
-                    android:id="@+id/tv_home_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/odd_item_divide_single"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textSize="@dimen/textSize14sp"
-                    tools:text="皇家马德里" />
-
-                <TextView
-                    android:id="@+id/tv_draw"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/odd_item_divide_single"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/draw"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textSize="@dimen/textSize14sp"
-                    tools:text="和" />
-
-                <TextView
-                    android:id="@+id/tv_away_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/odd_item_divide_single"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textSize="@dimen/textSize14sp"
-                    tools:text="利物浦" />
-
-            </LinearLayout>
+            <include layout="@layout/content_odds_detail_list_team" />
 
             <LinearLayout
                 android:layout_width="match_parent"
