[feature] 1. 調整注單詳情的切換邏輯  2. 移除原詳情頁不必要的UI

--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -113,7 +113,8 @@
         android:id="@+id/cl_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingHorizontal="4dp"
+        android:layout_marginHorizontal="2dp"
+        android:paddingHorizontal="12dp"
         android:layout_weight="1"
         android:background="@drawable/bg_bet_record_tab_1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -123,7 +124,6 @@
             android:id="@+id/bet_tab"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -153,7 +153,6 @@
             android:id="@+id/cl_bet_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
             android:background="@color/color_191919_FCFCFC"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/bet_tab"
@@ -177,7 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:layout_marginEnd="@dimen/margin_10"
+                android:layout_marginHorizontal="4dp"
                 android:drawablePadding="@dimen/margin_6"
                 android:text="@string/text_us_east_time"
                 android:textColor="@color/color_6C7BA8_A7B2C4"
@@ -199,7 +198,7 @@
                 android:id="@+id/settled_title_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
+                android:layout_marginHorizontal="14dp"
                 app:cardCornerRadius="2dp"
                 app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -261,8 +260,9 @@
             android:id="@+id/sm_settled_tab_refresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginHorizontal="14dp"
             android:layout_marginBottom="18dp"
+            tools:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_bet_sheet"
             app:srlDragRate="0.3"
@@ -283,9 +283,10 @@
             android:id="@+id/sm_unsettled_tab_refresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginHorizontal="14dp"
             android:layout_marginBottom="18dp"
             android:visibility="gone"
+            tools:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_bet_sheet"
             app:srlDragRate="0.3"
