--- a/app/src/main/res/layout/item_account_history.xml
+++ b/app/src/main/res/layout/item_account_history.xml
@@ -120,6 +120,7 @@
     </LinearLayout>
 
         <View
+            android:id="@+id/bottom_line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/color_80334266_E3E8EE" />
