--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -69,6 +69,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
                 android:text="@string/commission_detail"
+                android:visibility="gone"
                 android:layout_marginStart="@dimen/margin_10"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
