--- a/app/src/main/res/layout/fragment_account_history_next.xml
+++ b/app/src/main/res/layout/fragment_account_history_next.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@color/color_EDEDED"
     android:orientation="vertical"
     tools:context="org.cxct.sportlottery.ui.main.accountHistory.next.AccountHistoryNextFragment"
     tools:ignore="SpUsage">
+
+    <include
+        android:id="@+id/titleBar"
+        layout="@layout/view_account_history_next_title_bar" />
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/view_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,10 +36,13 @@
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="1"
-            tools:listitem="@layout/view_account_history_next_title_bar" />
+            tools:listitem="@layout/item_account_history_next_content" />
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
+    <include
+        android:id="@+id/totalView"
+        layout="@layout/item_account_history_next_total" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
 
