--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -55,51 +55,45 @@
         android:layout_height="1dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="9dp"
-        android:layout_marginBottom="6dp"
         android:background="@color/color_E8EFFD" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="5dp"
         android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/tv_fake"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/viewLeftLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_detail_odd_title_line" />
+            android:src="@drawable/ic_detail_odd_title_line"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_fake"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_fake" />
 
         <TextView
-            android:id="@+id/title_home_name_parlay"
+            android:id="@+id/title_team_name_parlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textColor="@color/color_9BB3D9_535D76"
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold"
-            tools:text="密尔沃基雄鹿" />
-
-        <TextView
-            android:id="@+id/tv_vs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:text="@string/verse_upper"
-            android:textColor="@color/color_6C7BA8_A7B2C4"
-            android:textSize="@dimen/textSize14sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/title_away_name_parlay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:textColor="@color/color_9BB3D9_535D76"
-            android:textSize="@dimen/textSize14sp"
-            android:textStyle="bold"
-            tools:text="亚特兰大老鹰" />
-    </LinearLayout>
+            app:layout_constraintStart_toEndOf="@+id/viewLeftLine"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="密尔沃基雄鹿 VS 亚特兰大老鹰" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/content_play"
