--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -20,6 +20,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <View
+            android:id="@+id/topView"
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
