--- a/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
@@ -144,8 +144,7 @@
             android:id="@+id/divider2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_191919_EEEFF0"
-            app:layout_constraintTop_toBottomOf="@id/tv_team_home" />
+            android:background="@color/color_191919_EEEFF0" />
 
     </LinearLayout>
 
