调整银行卡列表UI

--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -28,6 +28,7 @@
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold" />
         <LinearLayout
+            android:layout_marginTop="@dimen/margin_10"
             android:layout_marginStart="@dimen/margin_16"
             android:orientation="horizontal"
             android:layout_width="match_parent"
