--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -414,6 +414,9 @@
     <color name="color_0D838383">#0D838383</color>
     <color name="color_EAEAEA">#EAEAEA</color>
     <color name="color_26E23434">#26E23434</color>
+    <color name="color_28BA78">#28BA78</color>
+    <color name="color_F0A536">#F0A536</color>
+
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
