--- a/app/src/main/res/layout/content_baseball_status.xml
+++ b/app/src/main/res/layout/content_baseball_status.xml
@@ -8,7 +8,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
         android:orientation="horizontal">
 
         <TextView
@@ -17,16 +16,17 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_6C7BA8"
             android:textSize="@dimen/textSize10sp"
+            android:layout_marginRight="5dp"
             android:visibility="gone"
             tools:text="10"
             tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/league_odd_match_halfStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_gravity="center"
-            android:layout_marginStart="4dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/ic_bb_first_half"
             android:visibility="gone"
             tools:ignore="ContentDescription"
@@ -34,10 +34,10 @@
 
         <ImageView
             android:id="@+id/league_odd_match_basebag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_gravity="center"
-            android:layout_marginStart="6dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/ic_bb_base_bag_0_0_0"
             android:visibility="gone"
             tools:ignore="ContentDescription"
@@ -47,7 +47,7 @@
             android:id="@+id/txvOut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginRight="5dp"
             android:textColor="@color/color_6C7BA8"
             android:textSize="@dimen/textSize12sp"
             android:visibility="gone"
