--- a/app/src/main/res/layout/button_odd_detail_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail_detail.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="3dp">
 
     <FrameLayout
@@ -14,95 +13,54 @@
         android:background="@drawable/selector_button_radius_4_odds">
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:paddingHorizontal="6dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal"
             tools:ignore="SpUsage">
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/lin_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/helvetica"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="@color/selector_button_odd_top_text"
-                android:textSize="@dimen/textSize14sp"
-                android:paddingRight="5dp"
-                tools:text="义大利义大利"
-                tools:textColor="@color/color_A7B2C4"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-<!--            <TextView-->
-<!--                android:id="@+id/tv_spread_2"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:fontFamily="@font/helvetica"-->
-<!--                android:maxLines="1"-->
-<!--                android:textColor="@color/selector_button_odd_top_text2"-->
-<!--                android:textSize="@dimen/textSize13sp"-->
-<!--                tools:text="-0.5/1"-->
-<!--                tools:textColor="@color/color_A7B2C4"-->
-<!--                app:layout_constraintRight_toLeftOf="@+id/tv_odds"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
-
-
-
-            <TextView
-                android:id="@+id/tv_spread"
-                android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/helvetica"
-                android:maxLines="1"
-                android:textColor="@color/selector_button_odd_top_text"
-                android:textSize="@dimen/textSize13sp"
-                tools:text="-0.5/1"
-                tools:textColor="@color/color_A7B2C4"
-                app:layout_constraintLeft_toRightOf="@+id/tv_name"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:gravity="center_vertical"
+                android:visibility="visible">
 
-            <View
-                android:id="@+id/space_item_remain"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintRight_toLeftOf="@+id/tv_spread_space"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                />
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/helvetica"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/selector_button_odd_top_text"
+                    android:textSize="@dimen/textSize14sp"
+                    android:paddingRight="5dp"
+                    android:text="义大利义大利00000000000000000000000000000000000"
+                    tools:textColor="@color/color_A7B2C4" />
 
-            <TextView
-                android:id="@+id/tv_spread_space"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/helvetica"
-                android:maxLines="1"
-                android:textColor="@color/selector_button_odd_top_text2"
-                android:textSize="@dimen/textSize13sp"
-                tools:text="-0.5/1"
-                tools:textColor="@color/color_A7B2C4"
-                app:layout_constraintRight_toLeftOf="@+id/lin_odd"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="invisible" />
+                <TextView
+                    android:id="@+id/tv_spread"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/helvetica"
+                    android:maxLines="1"
+                    android:textColor="@color/selector_button_odd_top_text"
+                    android:textSize="@dimen/textSize13sp"
+                    tools:text="-0.5/1"
+                    tools:textColor="@color/color_A7B2C4" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/lin_odd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/iv_arrow"
@@ -125,7 +83,7 @@
             </LinearLayout>
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
 
         <ImageView
