--- a/app/src/main/res/layout/content_odds_detail_list_team.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_team.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingHorizontal="10dp">
 
         <ImageView
             android:id="@+id/iv_home_logo"
@@ -34,6 +35,7 @@
         android:id="@+id/tv_draw"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingHorizontal="10dp"
         android:gravity="center"
         android:layout_weight="1"
         android:singleLine="true"
@@ -48,6 +50,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingHorizontal="10dp"
         android:layout_weight="1"
         android:gravity="center">
 
