--- a/app/src/main/res/layout/view_toolbar_detail_live.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_live.xml
@@ -91,30 +91,12 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="@dimen/margin_15"
-        android:layout_marginHorizontal="@dimen/margin_15">
-
-        <ImageView
-            android:id="@+id/iv_sound"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:padding="@dimen/margin_5"
-            android:src="@drawable/ic_sound" />
-
-        <androidx.legacy.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <ImageView
-            android:id="@+id/iv_fullscreen"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:padding="@dimen/margin_5"
-            android:src="@drawable/selector_fullscreen" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/iv_fullscreen"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="@dimen/margin_15"
+        android:padding="@dimen/margin_5"
+        android:src="@drawable/selector_fullscreen" />
 </FrameLayout>
