[Modify] 注單記錄，統一無資料UI layout

--- a/app/src/main/res/layout/itemview_game_no_record.xml
+++ b/app/src/main/res/layout/itemview_game_no_record.xml
@@ -12,8 +12,7 @@
         android:src="@drawable/ic_img_no_game_record"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/color_2a2a2a_dedede"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 
